fix layout and comment old html block

--- a/style.css
+++ b/style.css
@@ -12,6 +12,8 @@ body {
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap: 25px;
+    padding-bottom: 100px;
+    padding-top: 100px;
 }
 .box {
     display: flex;
